--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
@@ -30,7 +31,7 @@
 # .idea/modules.xml
 # .idea/*.iml
 # .idea/modules
-
+.idea/sonarlint/issuestore
 # CMake
 cmake-build-*/
 
@@ -84,4 +85,3 @@ fabric.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
